Fixed wrong font in body

--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -9,7 +9,7 @@ body {
   background-attachment: fixed;
   background-size: cover;
   background-repeat: no-repeat;
-  font-family: "Numans", sans-serif;
+  font-family: var(--font-family);
 }
 
 nav {
